src/objects/Notification_Templates__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores notification templates which can be used in the sending notifications to consumers.</description>
    <fields>
        <fullName>Brand__c</fullName>
        <inlineHelpText>Leave this field empty if you want to insert a Notification template for the entire language. Our logic works like this...First searches for the &apos;Brand + Language&apos; combination, if matched record not found, then searches for &apos;Brand is empty + Language&apos;</inlineHelpText>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <inlineHelpText>E.g. English-US, Spanish...</inlineHelpText>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Id__c</fullName>
        <label>Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Notification Templates</label>
</CustomObject>